--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 env:
-  RUBY_VERSION: 2.6
-  POSTGRES_USER: ruby
-  POSTGRES_PASSWORD: ruby
+  RUBY_VERSION: 2.6.6
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
   POSTGRES_DB: request_bean_rails
 
 name: Build
