--- a/config/database.yml
+++ b/config/database.yml
@@ -20,12 +20,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: request_bean_rails
-  password: local_password
 
 development:
   <<: *default
   database: request_bean_rails_development
+  username: postgres
+  password: postgres
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
