--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "request_bean_rails",
   "private": true,
   "dependencies": {
+    "@hotwired/turbo": "^7.0.0-beta.4",
+    "@hotwired/turbo-rails": "^7.0.0-beta.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "tailwindcss": "^2.0.3",
-    "turbolinks": "^5.2.0"
+    "tailwindcss": "^2.0.3"
   },
   "version": "0.1.0",
   "devDependencies": {
