--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "tailwindcss": "^2.0.3"
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "webpack-dev-server": "^3.11.2"
   }
 }
